// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChildProductCard stories snapshot > Controlled story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-80"
  >
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm h-full"
      data-slot="card"
      data-testid="child-product"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-4"
        data-slot="card-header"
      >
        <div
          class="font-semibold text-lg"
          data-slot="card-title"
        >
          Turquoise and Gold Bracelet
        </div>
        <div
          class="items-center gap-2"
        >
          <span
            aria-label="Current price: $38.00"
            aria-live="polite"
            class="[&:not(:first-child)]:mt-6 text-left text-xl font-bold text-foreground"
          >
            $38.00
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Turquoise and Gold Bracelet
            Current price: $38.00
          </span>
           
        </div>
      </div>
      <div
        class="px-6 space-y-4"
        data-slot="card-content"
      >
        <div
          class="aspect-square"
        >
          <div
            class="space-y-4"
          >
            <div
              class="aspect-square overflow-hidden rounded-lg bg-muted"
            >
              <div
                class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
              >
                <picture>
                  <source
                    media="(min-width: 640px)"
                    sizes="680px"
                    srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.webp?sw=680&q=70&sfrm=jpg 680w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.webp?sw=1360&q=70&sfrm=jpg 1360w"
                    type="image/webp"
                  />
                  <source
                    sizes="100vw"
                    srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.webp?sw=640&q=70&sfrm=jpg 640w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.webp?sw=1280&q=70&sfrm=jpg 1280w"
                    type="image/webp"
                  />
                  <img
                    alt="Turquoise and Gold Bracelet, Gold, large"
                    fetchpriority="auto"
                    loading="lazy"
                    src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.jpg"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-3"
        >
          <div
            aria-label="Color"
            class="flex flex-col gap-3"
            role="radiogroup"
          >
            <div
              class="flex items-center gap-2 text-sm text-foreground"
            >
              <span
                class="font-semibold"
              >
                Color
                :
              </span>
              <span>
                Gold
              </span>
            </div>
            <div
              class="flex flex-wrap gap-2 focus:outline-none"
            >
              <button
                aria-checked="true"
                aria-label="Gold"
                class="border-2 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-full w-7 h-7 p-1 cursor-pointer border-black"
                position="relative"
                role="radio"
                tabindex="0"
                type="button"
              >
                <div
                  class="flex items-center justify-center w-full h-full text-sm font-medium"
                >
                  <div
                    aria-label="Turquoise and Gold Bracelet, Gold, swatch"
                    class="w-full h-full bg-cover bg-center bg-no-repeat rounded-full"
                    style="background-image: url("https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe64c51d1/images/swatch/PG.60119239.JJ887XX.CP.jpg");"
                  />
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="text-center text-sm"
        >
          <span
            class="text-primary font-medium"
          >
            ✓ Selected
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChildProductCard stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-80"
  >
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm h-full"
      data-slot="card"
      data-testid="child-product"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-4"
        data-slot="card-header"
      >
        <div
          class="font-semibold text-lg"
          data-slot="card-title"
        >
          Turquoise and Gold Bracelet
        </div>
        <div
          class="items-center gap-2"
        >
          <span
            aria-label="Current price: $38.00"
            aria-live="polite"
            class="[&:not(:first-child)]:mt-6 text-left text-xl font-bold text-foreground"
          >
            $38.00
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Turquoise and Gold Bracelet
            Current price: $38.00
          </span>
           
        </div>
      </div>
      <div
        class="px-6 space-y-4"
        data-slot="card-content"
      >
        <div
          class="aspect-square"
        >
          <div
            class="space-y-4"
          >
            <div
              class="aspect-square overflow-hidden rounded-lg bg-muted"
            >
              <div
                class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
              >
                <picture>
                  <source
                    media="(min-width: 640px)"
                    sizes="680px"
                    srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.webp?sw=680&q=70&sfrm=jpg 680w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.webp?sw=1360&q=70&sfrm=jpg 1360w"
                    type="image/webp"
                  />
                  <source
                    sizes="100vw"
                    srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.webp?sw=640&q=70&sfrm=jpg 640w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.webp?sw=1280&q=70&sfrm=jpg 1280w"
                    type="image/webp"
                  />
                  <img
                    alt="Turquoise and Gold Bracelet, Gold, large"
                    fetchpriority="auto"
                    loading="lazy"
                    src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf4356eab/images/large/PG.60119239.JJ887XX.PZ.jpg"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-3"
        >
          <div
            aria-label="Color"
            class="flex flex-col gap-3"
            role="radiogroup"
          >
            <div
              class="flex items-center gap-2 text-sm text-foreground"
            >
              <span
                class="font-semibold"
              >
                Color
                :
              </span>
              <span>
                Gold
              </span>
            </div>
            <div
              class="flex flex-wrap gap-2 focus:outline-none"
            >
              <a
                aria-checked="true"
                aria-label="Gold"
                class="border-2 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-full w-7 h-7 p-1 cursor-pointer border-black"
                href="/?013742002836M=color%3DJJ887XX"
                position="relative"
                role="radio"
                tabindex="0"
              >
                <div
                  class="flex items-center justify-center w-full h-full text-sm font-medium"
                >
                  <div
                    aria-label="Turquoise and Gold Bracelet, Gold, swatch"
                    class="w-full h-full bg-cover bg-center bg-no-repeat rounded-full"
                    style="background-image: url("https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwe64c51d1/images/swatch/PG.60119239.JJ887XX.CP.jpg");"
                  />
                </div>
              </a>
            </div>
          </div>
        </div>
        <div
          class="text-center text-sm"
        >
          <span
            class="text-primary font-medium"
          >
            ✓ Selected
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
